tests/ui/compile-fail/pin_data/tuple_struct_pinned_mutex_not_unpin.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> tests/ui/compile-fail/pin_data/tuple_struct_pinned_mutex_not_unpin.rs:16:20
   |
16 |     assert_unpin::<Tuple<usize>>();
   |                    ^^^^^^^^^^^^ within `mutex::linked_list::_::__Unpin<'_>`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `mutex::linked_list::_::__Unpin<'_>`
  --> tests/ui/compile-fail/pin_data/../../../../examples/./linked_list.rs
   |
   | #[pin_data(PinnedDrop)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: required for `mutex::linked_list::ListHead` to implement `Unpin`
  --> tests/ui/compile-fail/pin_data/../../../../examples/./linked_list.rs
   |
   | #[pin_data(PinnedDrop)]
   | ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced here
...
   | pub struct ListHead {
   |            ^^^^^^^^
note: required because it appears within the type `mutex::_::__Unpin<'_, usize>`
  --> tests/ui/compile-fail/pin_data/../../../../examples/mutex.rs
   |
   | #[pin_data]
   | ^^^^^^^^^^^
note: required for `CMutex<usize>` to implement `Unpin`
  --> tests/ui/compile-fail/pin_data/../../../../examples/mutex.rs
   |
   | #[pin_data]
   | ^^^^^^^^^^^ unsatisfied trait bound introduced here
   | pub struct CMutex<T> {
   |            ^^^^^^^^^
note: required because it appears within the type `_::__Unpin<'_, usize>`
  --> tests/ui/compile-fail/pin_data/tuple_struct_pinned_mutex_not_unpin.rs:10:1
   |
10 | #[pin_data]
   | ^^^^^^^^^^^
note: required for `Tuple<usize>` to implement `Unpin`
  --> tests/ui/compile-fail/pin_data/tuple_struct_pinned_mutex_not_unpin.rs:10:1
   |
10 | #[pin_data]
   | ^^^^^^^^^^^ unsatisfied trait bound introduced here
11 | struct Tuple<T>(#[pin] CMutex<T>, usize);
   |        ^^^^^^^^
note: required by a bound in `assert_unpin`
  --> tests/ui/compile-fail/pin_data/tuple_struct_pinned_mutex_not_unpin.rs:13:20
   |
13 | fn assert_unpin<T: Unpin>() {}
   |                    ^^^^^ required by this bound in `assert_unpin`
   = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
